# PathTracer

./: .gitignore  CMakeLists.txt  INSTALL.md  Makefile  README.md
debug/: debug_scene.xml
doc/: Doxyfile  scene_sample.xml
doc/html/: annotated.html  classMesh-members.html  classMesh.html  classMesh__inherit__graph.dot  classObject-members.html  classObject.html  classObject__inherit__graph.dot  classPlane-members.html  classPlane.html  classPlane__inherit__graph.dot  classRenderer-members.html  classRenderer.html  classScene-members.html  classScene.html  classSphere-members.html  classSphere.html  classSphere__coll__graph.dot  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  group__SceneParser.html  hierarchy.html  index.html  inherit_graph_1.dot  inherit_graph_2.dot  inherits.html  md__home_akseli_cpp-autumn2021_path-tracing-2_src_readme.html  menudata.js  mesh__object_8hpp_source.html  modules.html  object_8hpp_source.html  pages.html  plane__object_8hpp_source.html  scene_8hpp_source.html  sceneparser_8hpp_source.html  sphere__object_8hpp_source.html  (+6 more)
doc/latex/: annotated.tex  classMesh.tex  classMesh.tex.tmp  classMesh__coll__graph.dot  classObject.tex  classObject__inherit__graph.dot  classPlane.tex  classPlane__coll__graph.dot  classScene.tex  (+10 more)
libs/: readme.md
src/: main.cpp  mesh_object.cpp  mesh_object.hpp  object.cpp  object.hpp  plane_object.cpp  plane_object.hpp  scene.cpp  scene.hpp  sceneparser.cpp  sceneparser.hpp  sphere_object.cpp  sphere_object.hpp
(+33 files in other folders)
