cmake_minimum_required(VERSION 3.0)
project(PathTracer)
include_directories("src")
set(EXECUTABLE_NAME PathTracer)
file(GLOB SOURCES src/*.cpp)
add_subdirectory(libs/rapidxml-1.13)
add_executable(${EXECUTABLE_NAME} ${SOURCES})


target_link_libraries(${EXECUTABLE_NAME} PUBLIC rapidxml)
find_package(Eigen3 3.3 REQUIRED NO_MODULE)
target_link_libraries(${EXECUTABLE_NAME} PUBLIC Eigen3::Eigen)
find_package(SFML 2.5 COMPONENTS system graphics audio network REQUIRED)
target_link_libraries(${EXECUTABLE_NAME} PUBLIC sfml-graphics)

find_package(OpenMP)
if(OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS}" "${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
target_include_directories(PathTracer PUBLIC "${PROJECT_BINARY_DIR}" )
